@@ -1,7 +1,10 @@
+import org.gradle.api.tasks.testing.logging.TestLogEvent
+
 plugins {
-  kotlin("jvm") version "1.9.0"
+  kotlin("jvm") version "1.9.22"
   application
-  kotlin("plugin.serialization") version "1.9.0"
+  kotlin("plugin.serialization") version "1.9.22"
+  idea
 }
 
 group = "com.wordletime"
@@ -16,6 +19,9 @@ dependencies {
     exclude("ch.qos.logback", "logback-classic")
     exclude("ch.qos.logback", "logback-core")
   }
+
+  implementation(libs.kotlinxDateTime)
+
   implementation(libs.swagger) {
     exclude("ch.qos.logback", "logback-classic")
     exclude("ch.qos.logback", "logback-core")
@@ -28,28 +34,69 @@ dependencies {
 
   implementation(libs.bundles.kodein)
   implementation(libs.bundles.hoplite)
-  implementation(libs.slf4jSimple)
+
+  implementation(libs.bundles.log4j2)
+  implementation(libs.jacksonDataformatYaml)
+  implementation(libs.jacksonCore)
+
   implementation(libs.kotlinLogging)
   implementation(libs.coroutines)
 
-  testImplementation(testLibs.kotlin.test.junit5)
+  testImplementation(testLibs.bundles.junit)
+  testImplementation(testLibs.junitPlatformLauncher)
+  testImplementation(testLibs.bundles.ktor)
   testImplementation(testLibs.mockk)
   testImplementation(testLibs.coroutines)
 }
 
 tasks.test {
+  jvmArgs("-XX:+EnableDynamicAgentLoading")
   useJUnitPlatform()
+  testLogging {
+    events = setOf(
+      TestLogEvent.PASSED,
+      TestLogEvent.SKIPPED,
+      TestLogEvent.FAILED,
+      TestLogEvent.STANDARD_OUT,
+      TestLogEvent.STANDARD_ERROR
+    )
+  }
 }
 
+
 kotlin {
-  jvmToolchain(17)
+  jvmToolchain(21)
 }
 
 tasks.named<JavaExec>("run") {
-  systemProperties["config.override.wordProviderConfig.staticWord"] =
-    System.getProperty("config.override.wordProviderConfig.staticWord")
+  System.getProperties().filter {
+    val keyAsString = it.key as String
+    keyAsString.startsWith("config.override")
+  }.forEach {
+    systemProperties[it.key as String] = it.value as String
+  }
 }
 
 application {
   mainClass.set("com.wordletime.WordleTimeBackendApplicationKt")
+}
+
+tasks.processResources {
+  from("../../docs/.requirements") {
+    into("requirements/")
+    exclude("**/*.md")
+    exclude("**/*.pdf")
+  }
+  from("../../docs/other") {
+    into("other")
+    exclude("**/*.md")
+    exclude("**/*.pdf")
+  }
+}
+
+idea {
+  module {
+    isDownloadJavadoc = true
+    isDownloadSources = true
+  }
 }
